Comments gear z-index fix

--- a/app/assets/stylesheets/pages/profile_page.sass
+++ b/app/assets/stylesheets/pages/profile_page.sass
@@ -1345,7 +1345,7 @@
             border: 1px solid $color_border
             font-size: 13px
             min-height: 52px
-            padding: 5px 10px
+            padding: 1px 10px
             position: relative
             width: 100%
         .content, .nested_content
@@ -1438,7 +1438,7 @@
                   background-color: #FFFFFF
                   border: none
                   border-top: 1px solid $color_border
-                  padding: 5px 10px
+                  padding: 1px 10px
                   text-align: center
                   &.first
                     border: none
